made search field wider and taller, centered

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -38,8 +38,19 @@ header em {
   border-radius: 0;
   background-color: #00A79D;
   color: #FFFFFF;
-  height: 2em;
+  height: 3em;
   border: none;
   box-shadow: none;
   margin-top: 5px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-input {
+  width: 66vw;
+  height: 2.5em;
 }
