--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,11 @@
 * {
   font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
 }
 
 h1 {
   font-family: 'Roboto Slab', serif;
   font-size: 2em;
-  font-weight: 700;
   margin-bottom: 1em;
 }
 
@@ -35,12 +35,11 @@ h3 {
 }
 
 .title-input, .body-input {
-  font-size: 16px;
+  font-size: 1.2em;
   height: 2em;
-  margin-top: 10px;
+  margin-top: 1em 0;
   text-indent: 8px;
   margin: 0;
- /* width: 99%*/
 }
 
 .save-button {
@@ -51,7 +50,7 @@ h3 {
   border: none;
   margin-top: 1em;
   box-shadow: none;
-  margin-top: 5px;
+  margin-top: .2em;;
   width: 100%;
 }
 
