--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,4 @@
 * {
-  font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
 }
 
@@ -12,6 +11,10 @@ h1 {
 h3 {
   font-family: 'Roboto Slab', serif;
   font-size: 1.3em;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
 }
 
 .idea-input-header {
@@ -76,23 +79,80 @@ h3 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
 }
 
 .idea {
   margin: auto;
-  margin-top: 15px;
-  display: flex
-  width: 500px;
+  margin-top: 2em;
+  width: 30em;
   color: #939598;
-  border-bottom: 100% solid #D1D3D4;
-  height: 100%;
+  border-bottom: 1px solid #D1D3D4;
+  line-height: 1.2em;
 }
+
 .idea-header {
-  vertical-align: top;
+  display: flex;
+  margin-bottom: 5px;
 }
 
 .idea-header-buttons {
-  float: right;
+  display: flex;
+  justify-content: flex-end;
+  width: 68%;
+}
+
+.remove-idea {
+  background: url(../img/delete.svg) no-repeat;
+  border: none;
+  height: 15px;
+  width: 15px;
+}
+
+.remove-idea:hover {
+  background: url(../img/delete-hover.svg) no-repeat;
+  border: none;
+  height: 15px;
+  width: 15px;
+}
+
+.idea-footer {
+  display: flex;
+  margin-top: 5px;
+}
+
+.thumbs-up {
+  background: url(../img/upvote.svg) no-repeat;
+  border: none;
+  margin: 0 2px;
+  height: 15px;
+  width: 15px;
+}
+
+.thumbs-up:hover {
+  background: url(../img/upvote-hover.svg) no-repeat;
+  border: none;
+  margin: 0 2px;
+  height: 15px;
+  width: 15px;
+}
+
+.thumbs-down {
+  background: url(../img/downvote.svg) no-repeat;
+  border: none;
+  margin: 0;
+  height: 15px;
+  width: 15px;
+}
+
+.thumbs-down:hover {
+  background: url(../img/downvote-hover.svg) no-repeat;
+  border: none;
+  margin: 0;
+  height: 15px;
+  width: 15px;
+}
+
+footer p{
+  margin-left: 5px;
+  color: #6d6E71;
 }
