--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -21,6 +21,7 @@ h1 {
 h3 {
   font-family: 'Roboto Slab', serif;
   font-size: 1.3em;
+  padding: 5px;
 }
 
 .idea-input-header {
@@ -143,6 +144,10 @@ h3 {
       -ms-flex-pack: end;
           justify-content: flex-end;
   width: 100%;
+}
+
+.idea-body {
+  padding-left: 5px;
 }
 
 .remove-idea {
