--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,6 +19,7 @@ h1 {
 }
 
 h3 {
+  color: #6D6E71;
   font-family: 'Roboto Slab', serif;
   font-size: 1.3em;
   padding: 5px;
@@ -171,6 +172,7 @@ h3 {
 
 .idea-body {
   padding-left: 5px;
+  margin-bottom: 1.2em;
 }
 
 .remove-idea {
@@ -215,8 +217,13 @@ h3 {
   background: url(../img/downvote-hover.svg) no-repeat;
 }
 
+.ranking {
+  color: #6D6E71;
+  font-family: 'Roboto Slab', serif;
+}
+
 footer p {
-  color: #6d6E71;
+  color: #6D6E71;
   margin-left: 5px;
 }
 
@@ -239,8 +246,7 @@ footer p {
     width: 90%;
   }
   .body-input {
-    height: 6em;
-    lines: 3;
+    height: 4.5em;
     margin: .5em 0;
     text-indent: 8px;
   }
