--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,14 @@
 * {
   box-sizing: border-box;
 }
-
+/*Typography*/
 body {
   font-family: 'Open Sans', sans-serif;
+}
+
+h1, h3, .ranking {
+  font-family: 'Roboto Slab', serif;
+  color: #6D6E71;
 }
 
 textarea, input {
@@ -13,18 +18,16 @@ textarea, input {
 }
 
 h1 {
-  font-family: 'Roboto Slab', serif;
   font-size: 2em;
   margin: .4em 0;
 }
 
 h3 {
-  color: #6D6E71;
-  font-family: 'Roboto Slab', serif;
   font-size: 1.3em;
   padding: 5px;
 }
 
+/*Header Styles*/
 .idea-input-header {
   background-color: #E5F3F2;
   color: #6D6E71;
@@ -72,20 +75,7 @@ h3 {
   resize: none;
 }
 
-.save-button {
-  background-color: #00A79D;
-  border: none;
-  color: #FFFFFF;
-  font-size: 1.2em;
-  height: 2em;
-  margin: .2em 0;
-  width: 100%;
-}
-
-.save-button:hover {
-  background-color: #045E55;
-}
-
+/*Idea Container Styles*/
 .search-input {
   border: 1px solid #939598;
   font-size: 1.2em;
@@ -129,11 +119,6 @@ h3 {
   width: 30em;
 }
 
-.sort-button {
-  color: #939598;
-  margin-left: 10px;
-}
-
 .idea {
   border-bottom: 1px solid #D1D3D4;
   color: #939598;
@@ -157,6 +142,42 @@ h3 {
           flex: 5;
 }
 
+.idea-body {
+  padding-left: 5px;
+  margin-bottom: 1.2em;
+}
+
+.idea-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+footer p {
+  color: #6D6E71;
+  margin-left: 5px;
+}
+
+/*Button Styles*/
+.save-button, .sort-button {
+  background-color: #00A79D;
+  border: none;
+  color: #FFFFFF;
+}
+
+.save-button {
+  font-size: 1.2em;
+  height: 2em;
+  margin: .2em 0;
+  width: 100%;
+}
+
+.save-button:hover {
+  background-color: #045E55;
+}
+
 .idea-header-buttons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -170,9 +191,10 @@ h3 {
   width: 100%;
 }
 
-.idea-body {
-  padding-left: 5px;
-  margin-bottom: 1.2em;
+.sort-button {
+  height: 2em;
+  margin-left: 10px;
+  width: 25%;
 }
 
 .remove-idea {
@@ -184,14 +206,6 @@ h3 {
 
 .remove-idea:hover {
   background: url(../img/delete-hover.svg) no-repeat;
-}
-
-.idea-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 10px;
-  margin-top: 10px;
 }
 
 .btn {
@@ -217,16 +231,7 @@ h3 {
   background: url(../img/downvote-hover.svg) no-repeat;
 }
 
-.ranking {
-  color: #6D6E71;
-  font-family: 'Roboto Slab', serif;
-}
-
-footer p {
-  color: #6D6E71;
-  margin-left: 5px;
-}
-
+/*Media Query*/
 @media (max-width: 600px) {
   html {
     min-width: 300px;
